Changelog
---------

1.2.4 (unreleased)
~~~~~~~~~~~~~~~~~~

* Specified package dependencies.
  [hannosch]

* Made the tests independent of default content.
  [hannosch]

1.2.3 (November 14th 2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~

* Fix assumption in control view: not every context object is
  IReferenceable. This fixes http://dev.plone.org/plone/ticket/8737
  [nouri]

1.2.2 (November 13th 2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~

* Fix action coniditions for the nth time; this time it's an
  over-ambitious "Cancel check-out" permission.  This fixes
  http://dev.plone.org/plone/ticket/8735
  [nouri]

1.2.1 (November 11th 2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~

* Refine permissions fix from 1.2.0 and make tests pass again:

  - Don't require Modify Portal Content (MPC) permission on the
    original to check out, which was omitted in the fix for 1.2.0.

  - Don't require MPC on the original for cancelling of checkout, only
    require it on the working copy.
  [nouri]

* Fix missing internationnalization (#8608 thanks to Vincent Fretin)
  [encolpe]

1.2.0 (October 24th 2008)
~~~~~~~~~~~~~~~~~~~~~~~~~

* Allow users without modify content permissions (but with the iterate
  check out permission) to check out items, and only allow them to
  check in back again only when they have modify content permissions.
  [nouri]

1.1.5 (August 18th 2008)
~~~~~~~~~~~~~~~~~~~~~~~~

* Fixed typo in subscribers/workflow.py. This fixes
  https://dev.plone.org/plone/ticket/8035.
  [dunlapm]

* Added i18n of status messages. This fixes part of 
  http://dev.plone.org/plone/ticket/8022.
  [naro]

1.1.0 (April 20th 2008)
~~~~~~~~~~~~~~~~~~~~~~~

* Fixed dodgy test in test_iterate.py that was dependent on semantics of 
  default workflow.
  [optilude]

* Fixed i18n markup and updated some messages. This closes
  http://dev.plone.org/plone/ticket/7958.
  [hannosch]

* Updated i18n:domain in templates to the plone domain. There's no need for a
  iterate domain.
  [hannosch]
