@@ -24,4 +24,6 @@ $Id: __init__.py 1395 2006-06-23 22:06:22Z hazmat $
 """
     
 import permissions
-    
+
+from zope.i18nmessageid import MessageFactory
+PloneMessageFactory = MessageFactory('plone')
