@@ -36,10 +36,10 @@ setup(name='plone.app.iterate',
           'zope.annotation',
           'zope.component',
           'zope.event',
+          'zope.i18nmessageid',
           'zope.interface',
           'zope.schema',
           'zope.viewlet',
-          'Plone',
           'Products.Archetypes',
           'Products.CMFCore',
           'Products.CMFEditions',
